# warehouse_layout_editor

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  DEBT.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: index.html
app/css/: styles.css
app/data/: default_layout.json
app/js/: dbconnect.js  editor.js  geometry.js  labels.js  main.js  migrations.js  preview3d.js  schema.js  store.js
docs/: git-and-github.md  postgres.md  step4-mapping.md
schema/: 0001_init.sql
scripts/: gen_default_v5.mjs
server/: __init__.py  config.py  dev_server.py  layout_schema.py  persistence.py  seed.py
tests/: test_layout_schema.py  test_persistence.py
tests/fixtures/: dbconnect_sample.json
tests/js/: binNaming.test.mjs  dbconnect.test.mjs  geometry.test.mjs  labels.test.mjs  levelHeights.test.mjs  migrations.test.mjs
